test/typecheck/fail/enum_shadow_let.sail
default Order dec

let A : int = 1

enum Y = {A, D}
